--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,10 +7,12 @@ environment:
   sdk: ^3.8.0
 
 dependencies:
+  flame: ^1.30.1
   flutter:
     sdk: flutter
   provider: ^6.1.5
   state_view: ^0.1.2
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
