Adds zoom / cleans up code

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: flutter_rts
-description: "A new Flutter project."
+name: archmage_rts
+description: "Archmage RTS"
 publish_to: 'none'
 version: 0.1.0
 
