--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "flutter_rts" "\0"
+            VALUE "FileDescription", "Archmage RTS" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "flutter_rts" "\0"
+            VALUE "InternalName", "ArchmageRTS" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "flutter_rts.exe" "\0"
-            VALUE "ProductName", "flutter_rts" "\0"
+            VALUE "OriginalFilename", "ArchmageRTS.exe" "\0"
+            VALUE "ProductName", "Archmage RTS" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
